# Blockchain

./: .gitignore  README.md
nodesetup/: Cargo.toml
nodesetup/src/: .env  main.rs
rust_poa_blockchain/: .env  Cargo.toml
rust_poa_blockchain/blocks/: e1f1
rust_poa_blockchain/src/: block.rs  main.rs  node.rs  p2p.rs  storage.rs
rust_poa_blockchain/src/networking/: behaviour.rs  mod.rs  p2p.rs  payload.rs  reqres.rs
