[package]
name = "nodesetup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.53.2"
pqcrypto-dilithium = { version = "0.5.0", features = ["serialization"] }
pqcrypto-traits = "0.3.5"
libp2p-identity = "0.2.8"
base64 = "0.22.0"
dotenv = "0.15.0"
file = "1.1.2"