[package]
name = "rust_poa_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
file = "1.1.2"
fs = "0.0.5"
glob = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
utc = "0.2.0"
libp2p = { version = "0.53.2", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.36.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
hex = "0.4.3"
once_cell = "1.19.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"