[package]
name = "rust_poa_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sha2 = "0.10.8"
file = "1.1.2"
fs = "0.0.5"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.5.0"
libp2p = { version = "0.53.2", features = ["tcp", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros", "floodsub", "mdns", "identify"] }
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libp2p-identity = "0.2.8"
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"
base64 = "0.22.0"
rand = "0.8.5"
dotenv = "0.15.0"
